# Polygine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  license.md  readme.md
cmake/: PolygineConfig.cmake  PolygineConfig.cmake.in  polygine-config-version.cmake.in  polygine-config.cmake.in
doc/: config.h
examples/: CMakeLists.txt
examples/demo_app/: DemoApp.cpp
examples/demo_app/models/character/: character.blend  character.blend1  character.dae
examples/demo_app/shaders/: animated.vert  default.frag  default.vert  procedural_skybox.frag  skybox.frag  terrain.frag  terrain.vert  text.frag  ui.frag  ui.geom
examples/demo_app/shaders/particles/: particle.frag  particle.geom  particle.vert  test.geom  update.vert
examples/demo_app/shaders/postprocess/: color_adjust.frag
extlibs/: CMakeLists.txt
extlibs/glad/include/glad/: glad.h
extlibs/glad/src/: glad.c
extlibs/reactphysics3d/: Collider.cpp  ColliderComponents.h  CollisionBody.h  CollisionBodyComponents.h  Components.h  DebugRenderer.cpp  PhysicsWorld.h  RigidBody.h  RigidBodyComponents.h  TransformComponents.h
include/poly/Audio/: Audio.h  AudioBuffer.h  AudioData.h  AudioFileWriter.h  AudioRecorder.h  AudioSource.h  AudioStream.h  Components.h  Listener.h  Music.h  Sound.h
include/poly/Core/: Allocate.h  Clock.h  DataTypes.h  Endian.h  HandleArray.h  HandleArray.inl  Logger.h  Macros.h  NonCopyable.h  ObjectPool.h  ObjectPool.inl  Profiler.h  RingBuffer.h  Scheduler.h  Scheduler.inl  Sleep.h  Stream.h  StringHash.h  Time.h  Tuple.h  Tuple.inl  TypeInfo.h  TypeInfo.inl  Utf.h  XmlAttribute.h  XmlDocument.h  XmlNode.h
include/poly/Engine/: Components.h  Ecs.h  Ecs.inl  Entity.h  Entity.inl  Events.h  Events.inl  Extension.h  Input.h  Scene.h  Scene.inl  System.h  System.inl
include/poly/Graphics/: Animation.h  Billboard.h  Bone.h  Camera.cpp  Camera.h  Components.h  FrameBuffer.h  GLCheck.h  GLType.h  Grass.h  Image.h  Image.inl  Lighting.h  Lights.h  LodSystem.h  Material.h  Model.h  Octree.h  OpenGL.h  ParticleSystem.h  ParticleSystem.inl  PostProcess.h  RenderState.h  RenderSystem.h  Renderable.h  Renderer.h  Shader.h  Shadows.h  Skeleton.h  Skybox.h  Terrain.h  Texture.h  UniformBlock.h  UniformBlock.inl  UniformBuffer.h  UniformBuffer.inl  VertexArray.h  VertexBuffer.h  VertexBuffer.inl  Window.h
include/poly/Graphics/Shaders/: animated.vert.h  billboard.frag.h  (+18 more)
include/poly/Math/: BoundingBox.h  Frustum.h  Functions.h  Functions.inl  Matrix2.h  Matrix2.inl  Matrix3.h  Matrix3.inl  Matrix4.h  Matrix4.inl  Noise.h  Plane.h  Quaternion.h  Ray.h  Sphere.h  Transform.h  Vector2.h  Vector2.inl  Vector3.h  Vector3.inl  Vector4.h  Vector4.inl
include/poly/Network/: IpAddress.h  Packet.h  Packet.inl  Socket.h  TcpListener.h  TcpSocket.h  UdpSocket.h
include/poly/Physics/: BoxCollider.h  CapsuleCollider.h  Collider.h  Components.h  ConcaveMeshCollider.h  ConvexMeshCollider.h  Events.h  HeightMapCollider.h  Joints.h  Physics.h  Shapes.h  SphereCollider.h
include/poly/UI/: Button.h  Dropdown.h  Font.h  ListView.h  ProgressBar.h  ScrollView.h  Slider.h  Text.h  TextInput.h  UIContainer.h  UIElement.h  UIParser.h  UIParser.inl  UISystem.h
media/examples/: ui.xml
media/shaders/: animated.vert  billboard.frag  billboard.geom  billboard.vert  camera.glsl  clip_planes.glsl  common.glsl  cubemap.vert  debug_physics.frag  debug_physics.vert  default.frag  default.vert  deferred.frag  deferred.glsl  grass.frag  grass.geom  grass.vert  large_terrain.frag  large_terrain.vert  lighting.glsl  noise.glsl  procedural_skybox.frag  procedural_skybox.glsl  shadows.glsl  shadows_f.glsl  shadows_v.glsl  temp.cpp  terrain.frag  terrain.vert  terrain_map.glsl  ui.geom  ui.vert
media/shaders/particles/: gpu_example.geom  particle.geom  particle.vert  update.vert
media/shaders/postprocess/: add.frag  blur.frag  color_adjust.frag  fog.frag  lens_flare.frag  multiply.frag  pass_through.frag  quad.vert  reflections.frag  ssao.frag  threshold.frag
src/: CMakeLists.txt
src/Audio/: AudioBuffer.cpp  AudioData.cpp  AudioFileWriter.cpp  AudioRecorder.cpp  AudioStream.cpp  Listener.cpp  Music.cpp  Sound.cpp
src/Core/: Allocate.cpp  Clock.cpp  Endian.cpp  HandleArray.cpp  Logger.cpp  ObjectPool.cpp  Profiler.cpp  RingBuffer.cpp  Scheduler.cpp  Sleep.cpp  Stream.cpp  Time.cpp  TypeInfo.cpp  UIParser.cpp  Utf.cpp  XmlAttribute.cpp  XmlDocument.cpp  XmlNode.cpp
src/Engine/: Ecs.cpp  Entity.cpp  Events.cpp  Extension.cpp  Input.cpp  Scene.cpp
src/Graphics/: Animation.cpp  Billboard.cpp  Bone.cpp  Camera.cpp  Components.cpp  FrameBuffer.cpp  GLCheck.cpp  GraphicsComponents.cpp  Grass.cpp  Image.cpp  Lighting.cpp  Lights.cpp  LodSystem.cpp  Material.cpp  Model.cpp  Octree.cpp  ParticleSystem.cpp  PostProcess.cpp  RenderState.cpp  RenderSystem.cpp  Renderable.cpp  Renderer.cpp  Shader.cpp  Shadows.cpp  Skeleton.cpp  Skybox.cpp  Terrain.cpp  Texture.cpp  UniformBlock.cpp  UniformBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
src/Math/: BoundingBox.cpp  Frustum.cpp  Functions.cpp  Noise.cpp  Plane.cpp  Quaternion.cpp  Ray.cpp  Sphere.cpp  Transform.cpp
src/Network/: IpAddress.cpp  Packet.cpp  TcpListener.cpp  TcpSocket.cpp  UdpSocket.cpp
src/Physics/: BoxCollider.cpp  CapsuleCollider.cpp  Collider.cpp  ConcaveMeshCollider.cpp  ConvexMeshCollider.cpp  HeightMapCollider.cpp  Joints.cpp  Physics.cpp  PhysicsComponents.cpp  PhysicsShapes.cpp  SphereCollider.cpp
src/UI/: Button.cpp  Dropdown.cpp  Font.cpp  ListView.cpp  ProgressBar.cpp  ScrollView.cpp  Slider.cpp  Text.cpp  TextInput.cpp  UIElement.cpp  UIParser.cpp  UISystem.cpp
test/: CMakeLists.txt  Core.cpp  Math.cpp
util/: CMakeLists.txt  profiler_chart.py  shader_packager.py
util/terrain_editor/: BrushPanel.cpp  BrushPanel.h  CameraSystem.cpp  CameraSystem.h  ColorSelector.cpp  ColorSelector.h  EditSystem.cpp  EditSystem.h  FilePanel.cpp  FilePanel.h  RenderView.cpp  RenderView.h  TerrainEditor.cpp  UITemplates.cpp  UITemplates.h
util/terrain_editor/shaders/: default.vert  terrain.frag  ui.geom
util/terrain_editor/shaders/postprocess/: fxaa.frag
(+20 files in other folders)
